Fix blog post container not aligning with header container

--- a/src/web/client/assets/css/main.scss
+++ b/src/web/client/assets/css/main.scss
@@ -214,8 +214,8 @@ select{
     padding-left: $hspace;
     padding-right: $hspace;
 
-    max-width: 80ch;
     width: $container-width;
+    max-width: $max-container-width;
 
     @media (max-width: $mobile-breakpoint) {
         width: 100%;
